--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -3,7 +3,7 @@
 -----------------------------------------*/
 .site-footer {
     border-top: 1px solid #ddd;
-    background-color: #65a8ff;
+    background-color: #eeeeee;
     flex: 0 0 40px;
     display: flex;
     justify-content: center;
@@ -12,7 +12,7 @@
 
 .copyright-text {
     font-size: var(--copyright-font-size);
-    color: white;
+    color: var(--logo--text-color);
     font-weight: 500;
 }
 
