--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -9,11 +9,11 @@
     margin-right: 1em;
 }
 
-.bi-box {
-    font-size: 20px;
-    font-weight: 400;
-    margin-left: 1em;
-    color: black;
+.logo {
+    margin-left: 2em;
+    margin-top: 0.3em;
+    height: 3em;
+    
 }
 
 .header-dropdown-container{
@@ -25,8 +25,9 @@
 .header-container {
 	flex: 0 0 50px;
     display: flex;
+    background-color: #44464c;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--border-color);
 }
