--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,17 +7,24 @@
 :root {
   --white-color:                  #ffffff;
   --black-color:                  #000000;
-  --primary-color:                #1678fb;
+  --primary-color:                #41a6d1;
+  --primary-hover-color:          #1678fb;
   --secondary-color:              #44CFCB;
   --section-bg-color:             #eee;
   --primary-bg-color:             #a60067;
   --custom-btn-bg-color:          #DC602E;
   --third-bg-color:               #ccdde2ff;
   --custom-btn-bg-hover-color:    #ccdde2ff;
-  --heading-color:                #122C34;
+  --heading-color:                #44464c;
   --p-color:                      #1d3557ff;
   --border-color:                 #ccdde2ff;
   --link-hover-color:             #DC602E;
+  
+  --logo--background-color:       #44464c;
+  --logo--icon-color:             #41a6d1;
+  --logo--text-color:             #5c5959;
+  /* #1678fb; #65a8ff            */
+
 
   --body-font-family:            'Montserrat Alternates', sans-serif;
   --h1-font-size:                 74px;
@@ -262,9 +269,9 @@ strong {
 -----------------------------------------*/
 
 .button-primary {
-  background: #1678fb;
+  background: var(--primary-color);
   color: #fff;
-  font-size: 0.9em;
+  font-size: 1em;
   padding: 7px 5px 5px 5px;
   font-weight: 500;
   cursor: pointer;
@@ -276,14 +283,14 @@ strong {
   border-radius: var(--border-radius-small);
 }
 .button-primary:hover {
-  background: #65a8ff;
+  background: var(--primary-hover-color);
   border-color: transparent;
   color: var(--white-color);
 }
 
 .button-secondary {
-  color: #000;
-  font-size: 0.9em; 
+  color: #fff;
+  font-size: 1em; 
   font-weight: 500;
   cursor: pointer;
   transition: 0.4s;
@@ -291,7 +298,7 @@ strong {
   margin-top: 0em;
   padding: 6px 10px 0px 10px;
   height: 2.2em;
-  border: 1px solid #6e6e6e;
+  border: 1px solid #e7e7e7;
   border-radius: var(--border-radius-small);
 }
 .button-secondary:hover {
@@ -736,10 +743,7 @@ form label {
     position: inherit;
   }
 
-  .navbar-brand,
-  .custom-block p {
-    font-size: var(--menu-font-size);
-  }
+
 
   .custom-block .profile-image {
     width: 32px;
