--- a/src/pages/reset-password/resetPassword.module.css
+++ b/src/pages/reset-password/resetPassword.module.css
@@ -1,38 +1,10 @@
-
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-.error {
-    color: red;
-    font-size: 10px;
-    width: fit-content;
-    display: inline;
-    align-self: flex-end;
-    margin-right: 3em;
-}
-
-.signup {
-    padding-top: 0.2em;
-    align-self: center;
-    font-size: small;
-}
-
 .formContainer {
     background: #fff;
     border-radius: var(--border-radius-medium);
-    font-family: 'Montserrat Alternates';
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     min-width: 200px;
     align-self: center;
     margin: 0 auto;
-}
-
-.formContainer input:hover,
-.formContainer input:focus {
-    border-color: var(--primary-color);
 }
 
 .formContent {
@@ -40,34 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-}
 
-.formContent header {
-    margin-bottom: 2rem;
-    align-self: center;
-}
-
-.formContent footer {
-    align-self: center;
-    margin-top: 1em;
-    font-size: 1em;
-    width: 100%; /* Ensure footer takes full width */
-
-    .buttonPrimary {
-        background: var(--primary-color);
-        color: #fff;
-        font-size: 1.2em;
-        border: 0em solid transparent;
-        font-weight: 500;
-        cursor: pointer;
-        transition: 0.2s;
-        height: 2.2em;
-        width: 100%; /* Stretch button to full width */
-        border-radius: var(--border-radius-small);
-    }
-
-    .buttonPrimary:hover {
-        background: var(--primary-color);
-        color: var(--white-color);
+    header {
+        margin-bottom: 2rem;
     }
 }
